# personal-kb-mcp

./: .env.example  .gitignore  README.en.md  README.ja.md  README.ko.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml
mcp/: claude.json  codex.toml  hermess.yaml
scripts/: coverage_summary.py  main.py  setup-claude.sh  setup-codex.sh  setup-hermess.sh
scripts/agent_hooks/: llm_wiki_agent_hook.py  llm_wiki_context_client.py  llm_wiki_context_formatter.py  llm_wiki_context_payload.py
scripts/prompts/: __init__.py  agent_hook.py  installer.py
scripts/setup_support/: __init__.py  cli.py  codex_config.py  config.py  hooks.py  installers.py  runner.py
skills/llm-wiki/: SKILL.md
skills/llm-wiki-push/: SKILL.md
skills/llm-wiki-push/agents/: openai.yaml
skills/llm-wiki/agents/: openai.yaml
skills/personal-kb-llm-wiki/: SKILL.md
skills/personal-kb-llm-wiki/agents/: openai.yaml
src/common/: config.py  model.py  runtime_registry.py
src/common/helper/: time_helper.py
src/personal_kb_mcp/: main.py  runtime.py
src/personal_kb_mcp/git/: repository.py
src/personal_kb_mcp/status/: health.py
src/personal_kb_mcp/transport/: errors.py  fastapi_app.py  mcp_server.py
src/personal_kb_mcp/vault/: search.py
src/personal_kb_mcp/vector/: index.py
src/personal_kb_mcp/writes/: writer.py
src/vault/component/: github_push_scheduler.py  write_queue.py
src/vault/constant/: schema.py  search.py
src/vault/entity/: vault_note.py  vault_path.py
src/vault/error/: schema_validation_error.py  write_error.py
src/vault/service/: note_timestamp.py  vault_git_push_service.py  vault_inspection_service.py  vault_note_renderer.py  vault_schema_service.py  vault_search_score_service.py  vault_search_service.py  vault_write_service.py
tests/: test_agent_hooks.py  test_batch_writer.py  test_ci_quality_gates.py  test_config.py  test_coverage_summary.py  test_fastapi_app.py  test_git_repository.py  test_health.py  test_main.py  test_mcp_server.py  test_notes.py  test_runtime.py  test_search.py  test_setup_agents.py  test_skill_docs.py  test_vault_paths.py  test_vector_index.py  test_write_queue.py  test_writer.py
tests/common/: test_config.py  test_runtime_registry.py  test_time_helper.py
tests/vault/entity/: test_vault_note.py  test_vault_path.py
tests/vault/service/: test_vault_inspection_service.py  (+6 more)
(+21 files in other folders)
