[project]
name = "personal-kb-mcp"
version = "0.1.0"
description = "Personal Obsidian knowledge-base MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "mcp>=1.13.0",
    "pydantic-settings>=2.6.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
personal-kb-mcp = "personal_kb_mcp.main:run_server"

[project.optional-dependencies]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_kb_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.coverage.run]
branch = true
source = ["personal_kb_mcp"]
